<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:orientation="vertical" >  
    
   	<TextView android:id="@+id/recruit_country_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/textView_country"
		android:textColor="#0147FA"
		android:layout_marginLeft="@dimen/five"
		android:textSize="20sp"
		android:textStyle="bold" />
    
    <Spinner android:id="@+id/recruit_spinner_country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    
   	<TextView
   	    android:id="@+id/recruit_base_label"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginLeft="@dimen/five"
   	    android:paddingTop="@dimen/activity_vertical_margin"
   	    android:text="@string/textView_base"
   	    android:textColor="#0147FA"
   	    android:textSize="20sp"
   	    android:textStyle="bold" />
    
    <Spinner android:id="@+id/recruit_spinner_base"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
          
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin" >
    
    	<TextView android:id="@+id/recruit_first_name_label"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/textView_first_name"
    	    android:layout_marginLeft="@dimen/five"
    	    android:textColor="#0147FA"
    	    android:textSize="20sp"
    	    android:textStyle="bold" />
    
    	<TextView android:id="@+id/recruit_last_name_label"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/textView_last_name"
    	    android:layout_marginLeft="@dimen/five"
    	    android:textColor="#0147FA"
    	    android:textSize="20sp"
    	    android:textStyle="bold" />
    
    </LinearLayout>
    
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    
    	<EditText android:id="@+id/recruit_first_name"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/textView_first_name"/>
    
    	<EditText android:id="@+id/recruit_last_name"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/textView_last_name"/>
        
  	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="@dimen/activity_vertical_margin" >
    	
   		<TextView android:id="@+id/recruit_gender_label"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textView_gender"
	    	android:textColor="#0147FA"
	    	android:textSize="20sp"
	    	android:layout_weight="1"
	    	android:layout_marginLeft="@dimen/five"
	    	android:textStyle="bold" />
	    	
	 <TextView android:id="@+id/recruit_role_label"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textView_role"
	    	android:textColor="#0147FA"
	    	android:textSize="20sp"
	    	android:layout_weight="1"
	    	android:layout_marginLeft="@dimen/five"
	    	android:textStyle="bold" />
   		
  	</LinearLayout>
   	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">	 
	
		<RadioGroup android:id="@+id/recruit_gender"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" 
	    	android:layout_weight="1">
    		
    		<RadioButton android:id="@+id/recruit_radio_male" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="20sp"  
    			android:text="@string/radio_male"
    			android:onClick="onRadioButtonGenderClicked">
    		</RadioButton>
    	
    		<RadioButton android:id="@+id/recruit_radio_female" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content" 
    			android:textSize="20sp" 
    			android:text="@string/radio_female"
    			android:onClick="onRadioButtonGenderClicked">
    		</RadioButton>    
    	</RadioGroup>
	
		<RadioGroup android:id="@+id/recruit_role"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:layout_weight="1">
    		
    		<RadioButton android:id="@+id/recruit_radio_enlist" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="20sp"  
    			android:text="@string/radio_enlist"
    			android:onClick="onRadioButtonRoleClicked">
    		</RadioButton>
    	
    		<RadioButton android:id="@+id/recruit_radio_officer" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content"  
    			android:textSize="20sp"
    			android:text="@string/radio_officer"
    			android:onClick="onRadioButtonRoleClicked">
    		</RadioButton>    
    	</RadioGroup>
	
	</LinearLayout>	

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="@dimen/activity_vertical_margin" >

		<TextView
   	    	android:id="@+id/recruit_division_label"
   	    	android:layout_width="0dp"
   	    	android:layout_height="wrap_content"
   	    	android:text="@string/textView_division"
   	    	android:textColor="#0147FA"
   	    	android:textSize="20sp"
   	    	android:layout_weight="1"
   	    	android:textStyle="bold" />
    
		<TextView
	    	android:id="@+id/recruit_job_label"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textView_job"
	    	android:textColor="#0147FA"
	    	android:textSize="20sp"
	    	android:layout_weight="1"
	    	android:textStyle="bold" />
			   		
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">	
	
		<Spinner
	    	android:id="@+id/recruit_spinner_division"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content" 
	    	android:layout_weight="1"/>
	
		<Spinner
	    	android:id="@+id/recruit_spinner_jobs"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"/>
	  
	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <Button android:id="@+id/recruit_button_clear"
	        android:layout_weight = "1"
        	android:layout_width="0dp" 
    		android:layout_height="wrap_content" 
    		android:text="@string/button_clear"
	        android:onClick="clear"
	        android:textSize="20sp"/>
	    
	  	<Button android:id="@+id/recruit_button_recruit"
	        android:layout_weight = "1"
        	android:layout_width="0dp" 
    		android:layout_height="wrap_content" 
    		android:text="@string/button_recruit"
	        android:onClick="recruit"
	        android:textSize="20sp"/>
	    
	</LinearLayout>
	
	<Button android:id="@+id/recruit_button_viewBase"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/button_viewBase"
	 	android:onClick="viewBase"
	 	android:textSize="20sp"/>
	
</LinearLayout>