<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:orientation="vertical" >  
    

          
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin" >
    
    	<TextView android:id="@+id/recruitInfo_first_name_label"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/textView_first_name"
    	    android:layout_marginLeft="@dimen/five"
    	    android:textColor="#0147FA"
    	    android:textSize="20sp"
    	    android:textStyle="bold" />
    
    	<TextView android:id="@+id/recruitInfo_last_name_label"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/textView_last_name"
    	    android:layout_marginLeft="@dimen/five"
    	    android:textColor="#0147FA"
    	    android:textSize="20sp"
    	    android:textStyle="bold" />
    
    </LinearLayout>
    
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    
    	<EditText android:id="@+id/recruitInfo_first_name"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/textView_first_name"/>
    
    	<EditText android:id="@+id/recruitInfo_last_name"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/textView_last_name"/>
        
  	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="@dimen/activity_vertical_margin" >
    	
   		<TextView android:id="@+id/recruitInfo_gender_label"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textView_gender"
	    	android:textColor="#0147FA"
	    	android:textSize="20sp"
	    	android:layout_weight="1"
	    	android:layout_marginLeft="@dimen/five"
	    	android:textStyle="bold" />
	    	
	 <TextView android:id="@+id/recruitInfo_role_label"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textView_role"
	    	android:textColor="#0147FA"
	    	android:textSize="20sp"
	    	android:layout_weight="1"
	    	android:layout_marginLeft="@dimen/five"
	    	android:textStyle="bold" />
   		
  	</LinearLayout>
   	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">	 
	
		<RadioGroup android:id="@+id/recruitInfo_gender"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" 
	    	android:layout_weight="1">
    		
    		<RadioButton android:id="@+id/recruitInfo_male" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="20sp"  
    			android:text="@string/radio_male"
    			android:onClick="onRadioButtonGenderClickedRecruit">
    		</RadioButton>
    	
    		<RadioButton android:id="@+id/recruitInfo_female" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content" 
    			android:textSize="20sp" 
    			android:text="@string/radio_female"
    			android:onClick="onRadioButtonGenderClickedRecruit">
    		</RadioButton>    
    	</RadioGroup>
	
		<RadioGroup android:id="@+id/recruitInfo_role"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:layout_weight="1">
    		
    		<RadioButton android:id="@+id/recruitInfo_enlist" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="20sp"  
    			android:text="@string/radio_enlist"
    			android:onClick="onRadioButtonRoleClickedRecruit">
    		</RadioButton>
    	
    		<RadioButton android:id="@+id/recruitInfo_officer" 
        		android:layout_width="wrap_content"
    			android:layout_height="wrap_content"  
    			android:textSize="20sp"
    			android:text="@string/radio_officer"
    			android:onClick="onRadioButtonRoleClickedRecruit">
    		</RadioButton>    
    	</RadioGroup>
	
	</LinearLayout>	

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="@dimen/activity_vertical_margin" >

		<TextView
   	    	android:id="@+id/recruitInfo_division_label"
   	    	android:layout_width="0dp"
   	    	android:layout_height="wrap_content"
   	    	android:text="@string/textView_division"
   	    	android:textColor="#0147FA"
   	    	android:textSize="20sp"
   	    	android:layout_weight="1"
   	    	android:textStyle="bold" />
    
		<TextView
	    	android:id="@+id/recruitInfo_job_label"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textView_job"
	    	android:textColor="#0147FA"
	    	android:textSize="20sp"
	    	android:layout_weight="1"
	    	android:textStyle="bold" />
			   		
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">	
	
		<Spinner
	    	android:id="@+id/recruitInfo_division"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content" 
	    	android:layout_weight="1"/>
	
		<Spinner
	    	android:id="@+id/recruitInfo_jobs"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"/>
	  
	</LinearLayout>

	<TextView
	    android:id="@+id/recruitInfo_rank_label"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:text="@string/textView_rank"
	    android:textColor="#0147FA"
	    android:textSize="20sp"
	    android:textStyle="bold" />
	
	<Spinner android:id="@+id/recruitInfo_rank"
	  	android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"/>
	  
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <Button android:id="@+id/recruitInfo_save"
	        android:layout_weight = "1"
        	android:layout_width="0dp" 
    		android:layout_height="wrap_content" 
    		android:text="@string/button_save"
	        android:onClick="save"
	        android:textSize="20sp"/>
	    
	  	<Button android:id="@+id/recruitInfo_discharge"
	        android:layout_weight = "1"
        	android:layout_width="0dp" 
    		android:layout_height="wrap_content" 
    		android:text="@string/button_discharge"
	        android:onClick="discharge"
	        android:textSize="20sp"/>
	    
	</LinearLayout>

</LinearLayout>