<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TextView android:id="@+id/home_country_name_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/textView_country_name"
        android:textColor="#0147FA"
        android:textSize="25sp"
        android:textStyle="bold" 
        android:gravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_total_personnel"
        android:textColor="#0147FA"
        android:textSize="25sp"
        android:textStyle="bold" 
        android:gravity="center"/>

    <TableLayout android:id="@+id/home_table_total_personnel"
        android:layout_width="272dp"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:background="@drawable/border">
	
        <TableRow android:id="@+id/home_row_army"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView android:id="@+id/home_col_army"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/textView_army"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/home_col_army_number"
                android:text="@string/textView_zero"
               	android:textColor="#000000"
        		android:textSize="25sp"
        		android:textStyle="bold" 
        		android:layout_weight="1"/>
        </TableRow>
        
     	<View
           	android:layout_width="match_parent"
           	android:layout_height="1dip"
            android:background="#4fa5d5"/>
        
      	<TableRow android:id="@+id/home_row_air"
          	android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView android:id="@+id/home_col_air"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/textView_air"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/home_col_air_number"
                android:text="@string/textView_zero"
                android:textColor="#000000"
        		android:textSize="25sp"
        		android:textStyle="bold" 
        		android:layout_weight="1"/>            
        </TableRow>
        
        <View
           	android:layout_width="match_parent"
           	android:layout_height="1dip"
            android:background="#4fa5d5"/>
      	
      	<TableRow android:id="@+id/home_row_navy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView android:id="@+id/home_col_navy"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/textView_navy"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/home_col_navy_number"
                android:text="@string/textView_zero"
                android:textColor="#000000"
        		android:textSize="25sp"
        		android:textStyle="bold" 
        		android:layout_weight="1"/>            
        </TableRow>
        
    </TableLayout>

</LinearLayout>